--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-extensions==2.2.1
 django-filter==2.2.0
 django-rest-swagger==2.2.0
 djangorestframework==3.10.2
+drf-nested-routers==0.91
 Faker==0.9.1
 idna==2.8
 importlib-metadata==0.19
