minor changes for https and seed

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ mixer = "*"
 pytest-ipdb = "*"
 django-filter = "*"
 drf-nested-routers = "*"
+django-secure = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.6"
