--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,15 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.4
+Cython==0.29.13
 Django==2.2.4
+django-cors-headers==3.1.0
 django-environ==0.4.5
 django-extensions==2.2.1
 django-filter==2.2.0
 django-rest-swagger==2.2.0
+django-secure==1.0.1
+django-seed==0.1.9
 djangorestframework==3.10.2
 drf-nested-routers==0.91
 Faker==0.9.1
@@ -20,12 +24,14 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 mixer==6.1.3
 more-itertools==7.2.0
+numpy==1.17.1
 openapi-codec==1.3.2
 packaging==19.1
 pluggy==0.12.0
 psycopg2==2.8.3
 py==1.8.0
 pyparsing==2.4.2
+pystan==2.19.0.0
 pytest==5.1.1
 pytest-cov==2.7.1
 pytest-django==3.5.1
