--- a/Pipfile
+++ b/Pipfile
@@ -4,24 +4,53 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+django-seed = "*"
+pytest-django = "*"
+coverage = "*"
 
 [packages]
-django = "*"
-django-environ = "*"
-psycopg2 = "*"
-django-extensions = "*"
-django-rest-swagger = "*"
-djangorestframework = "*"
-pyyaml = "*"
-pytest = "*"
-pytest-django = "*"
-pytest-cov = "*"
-mixer = "*"
-pytest-ipdb = "*"
-django-filter = "*"
-drf-nested-routers = "*"
-django-secure = "*"
-django-cors-headers = "*"
+atomicwrites = "==1.3.0"
+attrs = "==19.1.0"
+certifi = "==2019.6.16"
+chardet = "==3.0.4"
+coreapi = "==2.3.3"
+coreschema = "==0.0.4"
+django = "==2.2.4"
+django-cors-headers = "==3.1.0"
+django-environ = "==0.4.5"
+django-extensions = "==2.2.1"
+django-filter = "==2.2.0"
+django-rest-swagger = "==2.2.0"
+djangorestframework = "==3.10.2"
+drf-nested-routers = "==0.91"
+faker = "==0.9.1"
+idna = "==2.8"
+importlib-metadata = "==0.19"
+itypes = "==1.1.0"
+more-itertools = "==7.2.0"
+numpy = "==1.17.1"
+openapi-codec = "==1.3.2"
+pluggy = "==0.12.0"
+psycopg2 = "==2.8.3"
+py = "==1.8.0"
+pyparsing = "==2.4.2"
+pytest-cov = "==2.7.1"
+pytest-django = "==3.5.1"
+python-dateutil = "==2.8.0"
+pytz = "==2019.2"
+pyyaml = "==5.1.2"
+requests = "==2.22.0"
+simplejson = "==3.16.0"
+six = "==1.12.0"
+sqlparse = "==0.3.0"
+text-unidecode = "==1.2"
+uritemplate = "==3.0.0"
+urllib3 = "==1.25.3"
+wcwidth = "==0.1.7"
+zipp = "==0.6.0"
+MarkupSafe = "==1.1.1"
 
 [requires]
 python_version = "3.6"
